# neosql

./: .gitignore  Makefile  README.md  pyproject.toml
neosql/: connection.py  exceptions.py
neosql/ffi/: __init__.py  driver.py  neosql_core.py  table.py
neosql/ffi/methods/: __init__.py  driver_methods.py
neosql/ffi/structs/: __init__.py  addr_struct.py  driver_struct.py  header_struct.py
neosql/utils/: __init__.py  singleton_meta.py
scripts/: release.sh
tests/: __init__.py  test_connection.py
tests/assets/: invalid_db_1.db  invalid_db_2.db  invalid_db_3.db  tree_tables_db.db  zero_db.db
